--- a/ReadME
+++ b/ReadME
@@ -1,1 +1,37 @@
-My  First Project 
+Zaga Token
+This Solidity project is a basic implementation of a custom ERC20 token named Zaga (ZAG). It showcases the fundamental 
+functionalities of a token contract, including minting and burning tokens. The purpose of this project is to provide evidence
+of my metacrafters task and it is also a starting point for developers looking to create their own ERC20 tokens on the
+ Ethereum blockchain.
+
+Description
+This project is a token contract written in Solidity, a programming language used for developing smart contracts on the 
+Ethereum blockchain. The contract includes functions for minting and burning tokens, as well as public variables that store 
+the token's name, abbreviation, and total supply. This program serves as a simple introduction to token contract development
+ and can be used as a foundation for more complex projects in the future.
+
+Getting Started
+Executing program
+To run this program, you can use Remix, an online Solidity IDE. To get started, go to the Remix website at 
+https://remix.ethereum.org/.
+
+Once you are on the Remix website, create a new file by clicking on the "+" icon in the left-hand sidebar. Save the file 
+with a .sol extension (e.g., MyToken.sol). Copy and paste the .sol code in this repo into the file:
+
+
+To compile the code, click on the "Solidity Compiler" tab in the left-hand sidebar. Make sure the "Compiler" option is set 
+to "0.8.19" (or another compatible version), and then click on the "Compile MyToken.sol" button.
+
+Once the code is compiled, you can deploy the contract by clicking on the "Deploy & Run Transactions" tab in the left-hand 
+sidebar. Select the "MyToken" contract from the dropdown menu, and then click on the "Deploy" button.
+
+Once the contract is deployed, you can interact with it by calling the mint and burn functions. Click on the "MyToken" 
+contract in the left-hand sidebar, and then use the appropriate function to manage the token supply.
+
+Authors
+Ekoh
+@ekoh360 is my twitter handle.
+
+License
+This project is licensed under the MIT License - see the LICENSE.md file for details.
+
